// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`check correct rendering 1`] = `
<div>
  <a
    class="navigation"
    data-discover="true"
    href="/about"
  >
    About
  </a>
  <div
    class="top-container"
  >
    <input
      class="input"
      placeholder="Start your search"
      value=""
    />
    <button>
       Search 
    </button>
  </div>
  <button>
    Invalidate ALL Cache
  </button>
   
  <a
    data-discover="true"
    href="/undefined"
  >
    <div
      class="pokemon-container"
    >
      <img
        src="https://example.com/bulbasaur.png"
      />
      <div
        class="pokemon-text-container"
      >
        <h2
          class="h2"
        >
           
          bulbasaur
           
        </h2>
        <span
          class="pokemon-description"
        >
          A strange seed was planted on its back at birth.
        </span>
      </div>
      <div
        class="checkbox"
      >
        <input
          class="custom-checkbox"
          data-testid="checkbox"
          type="checkbox"
        />
      </div>
    </div>
  </a>
  <div
    class="bottom-container"
  >
    <a
      data-discover="true"
      href="/1"
    >
      <div
        class="pagination"
      >
         
        1
         
      </div>
    </a>
  </div>
  <div>
    <div
      class="flyout hide"
    >
       
      <span
        class="bn-text"
      >
        Selected: 
        0
      </span>
       
      <button
        class="bn-text"
      >
         
        Unselect all
         
      </button>
      <button
        class="bn-text"
      >
         
        Download
         
      </button>
      <a
        class="hidden"
      >
        Hidden download link
      </a>
    </div>
  </div>
</div>
`;

exports[`show spinner on initial mount 1`] = `
<div>
  <a
    class="navigation"
    data-discover="true"
    href="/about"
  >
    About
  </a>
  <div
    class="top-container"
  >
    <input
      class="input"
      placeholder="Start your search"
      value=""
    />
    <button>
       Search 
    </button>
  </div>
  <button>
    Invalidate ALL Cache
  </button>
  <div
    class="loading"
  />
   
  <div
    class="message"
  >
    No Pokemons found. Please try a new search.
  </div>
  <div
    class="bottom-container"
  >
    <a
      data-discover="true"
      href="/1"
    >
      <div
        class="pagination"
      >
         
        1
         
      </div>
    </a>
  </div>
  <div>
    <div
      class="flyout hide"
    >
       
      <span
        class="bn-text"
      >
        Selected: 
        0
      </span>
       
      <button
        class="bn-text"
      >
         
        Unselect all
         
      </button>
      <button
        class="bn-text"
      >
         
        Download
         
      </button>
      <a
        class="hidden"
      >
        Hidden download link
      </a>
    </div>
  </div>
</div>
`;
